--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "vite": "^6.3.2"
   }
 }
